# dups

./: .gitignore  Cargo.toml  README.md  a.out  cargo-test-91124-10679964048765331820_0.profraw  cargo-test-91128-12378370776821896836_0.profraw  cargo-test-92520-12378370776821896836_0.profraw  change.detection.rules.txt  default_14996712418693821699_0_93672.profraw  default_2380986732745828263_0_93668.profraw  default_2380986732745828263_0_95262.profraw  dependencies.txt  output.csv  package-lock.json  package.json  profile.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/command/: scan_filesystem.rs
src-tauri/src/config/: mod.rs  turbo_tasker_cli_config.rs
src-tauri/src/handler/: mod.rs  noop_event_handler.rs  tauri_event_handler.rs
src-tauri/src/scanner/: resource_scanner.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/file_api/: compression_checker.rs  compressor.rs  file_management.rs  file_type_detector.rs  mod.rs
src-tauri/src/services/file_impl/: file_management_impl.rs  magic_number_file_type_detector.rs  mime_compression_checker.rs  mime_guess_file_type_detector.rs  mod.rs  zip_compressor.rs
src-tauri/src/services/scanner_api/: event_handler.rs  mod.rs
src-tauri/src/services/scanner_impl/: mod.rs  (+2 more)
src-tauri/src/state/: mod.rs  resource_metadata.rs  scan_stats.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/util/: util.rs
src-tauri/src/visitor/: directory_analyzer_visitor.rs  mod.rs  noop_logger.rs  progress_visitor.rs  scan_stats_visitor.rs  tauri_logger.rs  top_k_resource_visitor.rs  visitable.rs
(+69 files in other folders)
