[package]
name = "dups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
tempdir = "0.3.7"
chrono = "0.4.31"
csv = "1.1"
log = { version = "0.4.20", features = [] }
env_logger = "0.11.0"
lazy_static = { version = "1.4", features = [] }

[profile.dev]
opt-level = 3

[profile.release]
debug = true