[package]
name = "tt"
version = "0.1.0"
description = "Turbo tasker"
authors = ["toaler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tempfile = "3.2.0"
tempdir = "0.3.7"
chrono = "0.4.31"
csv = "1.1"
log = { version = "0.4.20", features = [] }
env_logger = "0.11.0"
lazy_static = { version = "1.4", features = [] }
clap = { version = "4.4.18", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

[profile.dev]
opt-level = 3

[profile.test]
debug = true

[profile.release]
debug = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
